# DeathChase3D

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  acinclude.m4  aclocal.m4  configure  configure.in  configure.in.in  deathchase3d.kdevprj  deathchase3d.kdevses  deathchase3d.lsm  subdirs
admin/: acinclude.m4.in
deathchase3d/: Makefile  Makefile.am  Makefile.in  dc.h  font.c  globals.c  objects.c  tree.c  treedraw.c
deathchase3d/docs/: Makefile.in
deathchase3d/docs/en/: Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
src/: config.h  dc.h  draw.c  font.c  globals.c  io.c  level.c  main.c  objects.c  sprites.c  tree.c  treedraw.c
