####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = deathchase3d

## INCLUDES were found outside kdevelop specific part

deathchase3d_SOURCES = treedraw.c tree.c sprites.c objects.c level.c io.c globals.c font.c draw.c main.c 
deathchase3d_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.c draw.c font.c globals.c io.c level.c objects.c sprites.c tree.c treedraw.c 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
deathchase3d_LDFLAGS = $(all_libraries) 
                                                                                
